spec/fixtures/modules/error/tasks/fail.ps1
Write-Output "failing"
exit 1